Bug fix: Dropdown not visible when the content is small

--- a/app/assets/stylesheets/brandscopic.less
+++ b/app/assets/stylesheets/brandscopic.less
@@ -4628,6 +4628,9 @@ a, i{
 
 
 body.campaigns_report {
+	.tab-content {
+		overflow: visible;
+	}
 	form {
 		.help-inline {
 			display: none;
